- Abort no Changes warning can now be disabled